# ros_msft_luis

./: .gitmodules  CMakeLists.txt  README.md  ROS_Direction.lu  ROS_roam.lu
.github/workflows/: ci.yaml
docs/: walkthrough-luis-config.md  walkthrough-simulation-move_base.md  walkthrough-simulation-moveit.md
ros_msft_luis/: CMakeLists.txt  package.xml
ros_msft_luis/launch/: luis.launch  luis_container.launch  luis_move_base.launch  luis_moveit.launch
ros_msft_luis/src/: azure_cs_luis.cpp  packages.config
ros_msft_luis_move_base/: CMakeLists.txt  package.xml
ros_msft_luis_move_base/src/: ros_msft_luis_move_base.cpp
ros_msft_luis_moveit/: CMakeLists.txt  package.xml
ros_msft_luis_moveit/src/: ros_msft_luis_moveit.cpp
ros_msft_luis_msgs/: CMakeLists.txt  package.xml
ros_msft_luis_msgs/msg/: Dimension.msg  Entity.msg  Intent.msg  TopIntent.msg
src/: azure_cs_luis.cpp
