<?xml version="1.0"?>
<package format="2">
  <name>ros_msft_luis</name>
  <version>0.0.1</version>
  <description>The Azure Cognative Services LUIS package</description>
  <maintainer email="lamadio@microsoft.com">Lou Amadio</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>audio_common_msgs</build_depend>
  <build_depend>ros_msft_luis_msgs</build_depend>
  <build_depend>resource_retriever</build_depend>
  <build_depend>curl</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>roslib</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ros_msft_luis_msgs</build_export_depend>
  <build_export_depend>audio_common_msgs</build_export_depend>
  <build_export_depend>resource_retriever</build_export_depend>
  <build_export_depend>curl</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>roslib</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_msft_luis_msgs</exec_depend>
  <exec_depend>audio_common_msgs</exec_depend>
  <exec_depend>resource_retriever</exec_depend>
  <exec_depend>curl</exec_depend>

  <export>
  </export>
</package>
