<?xml version="1.0"?>
<package format="2">
  <name>ros_msft_luis_move_base</name>
  <version>1.0.0</version>
  <description>The ros_msft_luis_move_base package</description>

  <maintainer email="lamadio@microsoft.com">Lou Amadio</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>move_base_msgs</build_depend>
  <build_depend>ros_msft_luis_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>move_base_msgs</build_export_depend>
  <build_export_depend>ros_msft_luis_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>move_base_msgs</exec_depend>
  <exec_depend>ros_msft_luis_msgs</exec_depend>

</package>